# coding_challenge_1

./: readme.md
001_a_ring_to_buffer_them_all/: CMakeLists.txt  Makefile  circular_buf.c  circular_buf.h  main.c  mutex_and_isr.c  mutex_and_isr.h  readme.md  ring_buffer.c
001_a_ring_to_buffer_them_all/include/: ring_buffer.h
001_a_ring_to_buffer_them_all/src/: ring_buffer.c  ring_buffer_test_main.c
002_under_the_heap/: CMakeLists.txt  mem_alloc.c  memoryAllocator.c  memoryAllocator.h  memory_allocator.c  readme.md
002_under_the_heap/include/: mem_alloc.h
002_under_the_heap/src/: mem_alloc.c  mem_alloc_test_main.c
003_hashes_to_hashes/: CMakeLists.txt  Makefile  hash_table.c  readme.md
003_hashes_to_hashes/include/: hash_table.h
003_hashes_to_hashes/src/: hash_table.c  hash_table_test_main.c
004_nasal_demons/: answers.c  nasal_response  readme.md
